--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Q&A Website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Q&A Repository</h1>
+    <p>Access answers in PDF or Python format.</p>
+  </header>
+  <main>
+    <div class="question-list">
+      <div class="question-item">
+        <h2>Question 1: What is Python?</h2>
+        <a href="files/answer1.pdf" download>Download Answer (PDF)</a>
+        <a href="files/answer1.py" download>Download Answer (Python)</a>
+      </div>
+      <div class="question-item">
+        <h2>Question 2: What are loops in Python?</h2>
+        <a href="files/answer2.pdf" download>Download Answer (PDF)</a>
+        <a href="files/answer2.py" download>Download Answer (Python)</a>
+      </div>
+      <!-- Add more question-item blocks for additional questions -->
+    </div>
+  </main>
+  <footer>
+    <p>&copy; 2025 Your Website Name</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
