--- a/index.html
+++ b/index.html
@@ -13,17 +13,84 @@
   </header>
   <main>
     <div class="question-list">
+      <!-- Question 1 -->
       <div class="question-item">
         <h2>Question 1: What is Python?</h2>
         <a href="files/answer1.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer1.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer1.pdf')">View Answer (PDF)</button>
       </div>
+
+      <!-- Question 2 -->
       <div class="question-item">
         <h2>Question 2: What are loops in Python?</h2>
         <a href="files/answer2.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer2.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer2.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 3 -->
+      <div class="question-item">
+        <h2>Question 3: What are Python data types?</h2>
+        <a href="files/answer3.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer3.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer3.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 4 -->
+      <div class="question-item">
+        <h2>Question 4: Explain Python functions.</h2>
+        <a href="files/answer4.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer4.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer4.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 5 -->
+      <div class="question-item">
+        <h2>Question 5: What is Pandas in Python?</h2>
+        <a href="files/answer5.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer5.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer5.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 6 -->
+      <div class="question-item">
+        <h2>Question 6: How do you create a list in Python?</h2>
+        <a href="files/answer6.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer6.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer6.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 7 -->
+      <div class="question-item">
+        <h2>Question 7: What is a dictionary in Python?</h2>
+        <a href="files/answer7.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer7.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer7.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 8 -->
+      <div class="question-item">
+        <h2>Question 8: Explain Python file handling.</h2>
+        <a href="files/answer8.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer8.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer8.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 9 -->
+      <div class="question-item">
+        <h2>Question 9: What are Python classes?</h2>
+        <a href="files/answer9.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer9.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer9.pdf')">View Answer (PDF)</button>
+      </div>
+
+      <!-- Question 10 -->
+      <div class="question-item">
+        <h2>Question 10: Explain Python decorators.</h2>
+        <a href="files/answer10.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="files/answer10.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('files/answer10.pdf')">View Answer (PDF)</button>
       </div>
     </div>
   </main>
