--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="VrpJGaXpuvs56UFPwo96vMIOuB9WQCoYmCX_34tdz0M" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Q&A Website</title>
   <link rel="stylesheet" href="style.css">
