--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="question-list">
       <!-- Question 1 -->
       <div class="question-item">
-        <h2>Question 1: What is Python?</h2>
+        <h2>Task 2: Filtering RDDs and the Minimum Temperature by Location</h2>
         <a href="files/answer1.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer1.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer1.pdf')">View Answer (PDF)</button>
@@ -24,7 +24,7 @@
 
       <!-- Question 2 -->
       <div class="question-item">
-        <h2>Question 2: What are loops in Python?</h2>
+        <h2>Task 3: Counting Word Occurrences using flatMap()</h2>
         <a href="files/answer2.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer2.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer2.pdf')">View Answer (PDF)</button>
@@ -32,7 +32,7 @@
 
       <!-- Question 3 -->
       <div class="question-item">
-        <h2>Question 3: What are Python data types?</h2>
+        <h2>Task 4: Executing SQL Commands and SQL-style Functions on a DataFrame</h2>
         <a href="files/answer3.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer3.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer3.pdf')">View Answer (PDF)</button>
@@ -40,7 +40,7 @@
 
       <!-- Question 4 -->
       <div class="question-item">
-        <h2>Question 4: Explain Python functions.</h2>
+        <h2>Task 5: Implement Total Spent by Customer with DataFrames</h2>
         <a href="files/answer4.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer4.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer4.pdf')">View Answer (PDF)</button>
@@ -48,7 +48,7 @@
 
       <!-- Question 5 -->
       <div class="question-item">
-        <h2>Question 5: What is Pandas in Python?</h2>
+        <h2>Task 6: Use Broadcast Variables to Display Movie Names Instead of ID Numbers</h2>
         <a href="files/answer5.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer5.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer5.pdf')">View Answer (PDF)</button>
@@ -56,7 +56,7 @@
 
       <!-- Question 6 -->
       <div class="question-item">
-        <h2>Question 6: How do you create a list in Python?</h2>
+        <h2>Task 7: Using Spark ML to Produce Movie Recommendations</h2>
         <a href="files/answer6.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer6.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer6.pdf')">View Answer (PDF)</button>
@@ -64,7 +64,7 @@
 
       <!-- Question 7 -->
       <div class="question-item">
-        <h2>Question 7: What is a dictionary in Python?</h2>
+        <h2>Task 8: Use Windows with Structured Streaming to Track Most-Viewed URLs</h2>
         <a href="files/answer7.pdf" target="_blank" download>Download Answer (PDF)</a>
         <a href="files/answer7.py" download>Download Answer (Python)</a>
         <button onclick="viewPDF('files/answer7.pdf')">View Answer (PDF)</button>
