--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <!-- Question 1 -->
       <div class="question-item">
         <h2>Task 2: Filtering RDDs and the Minimum Temperature by Location</h2>
-        <a href="files/answer1.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer1.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer1.pdf')">View Answer (PDF)</button>
+        <a href="sparks/Temperatures.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Temperatures.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/Temperatures.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 2 -->
