--- a/index.html
+++ b/index.html
@@ -25,49 +25,49 @@
       <!-- Question 2 -->
       <div class="question-item">
         <h2>Task 3: Counting Word Occurrences using flatMap()</h2>
-        <a href="files/answer2.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer2.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer2.pdf')">View Answer (PDF)</button>
+        <a href="sparks/Counting Word.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Counting Word.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/Counting Word.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 3 -->
       <div class="question-item">
         <h2>Task 4: Executing SQL Commands and SQL-style Functions on a DataFrame</h2>
-        <a href="files/answer3.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer3.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer3.pdf')">View Answer (PDF)</button>
+        <a href="sparks/SQL Commands.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/SQL Commands.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/SQL Commands.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 4 -->
       <div class="question-item">
         <h2>Task 5: Implement Total Spent by Customer with DataFrames</h2>
-        <a href="files/answer4.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer4.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer4.pdf')">View Answer (PDF)</button>
+        <a href="sparks/Total Spent.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Total Spent.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/Total Spent.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 5 -->
       <div class="question-item">
         <h2>Task 6: Use Broadcast Variables to Display Movie Names Instead of ID Numbers</h2>
-        <a href="files/answer5.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer5.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer5.pdf')">View Answer (PDF)</button>
+        <a href="sparks/Broadcast.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Broadcast.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/Broadcast.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 6 -->
       <div class="question-item">
         <h2>Task 7: Using Spark ML to Produce Movie Recommendations</h2>
-        <a href="files/answer6.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer6.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer6.pdf')">View Answer (PDF)</button>
+        <a href="sparks/Movie Recommendations.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Movie Recommendations.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/Movie Recommendations.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 7 -->
       <div class="question-item">
         <h2>Task 8: Use Windows with Structured Streaming to Track Most-Viewed URLs</h2>
-        <a href="files/answer7.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer7.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer7.pdf')">View Answer (PDF)</button>
+        <a href="sparks/Most-Viewed URLs.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Most-Viewed URLs.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('sparks/Most-Viewed URLs.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 8 -->
