--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       <!-- Question 9 -->
       <div class="question-item">
         <h2>Question 9: What are Python classes?</h2>
-        <a href="files/answer9.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer9.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer9.pdf')">View Answer (PDF)</button>
+        <a href="spark.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="/spark.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('/spark.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 10 -->
