--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <div class="question-item">
         <h2>Question 9: What are Python classes?</h2>
         <a href="spark.py" target="_blank" download>Download Answer (PDF)</a>
-        <a href="/spark.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('/spark.py')">View Answer (PDF)</button>
+        <a href="spark.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('spark.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 10 -->
