--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <!-- Question 1 -->
       <div class="question-item">
         <h2>Task 2: Filtering RDDs and the Minimum Temperature by Location</h2>
-        <a href="sparks/Temperatures.pdf" target="_blank" download>Download Answer (PDF)</a>
+        <a href="sparks/Filtering RDD and MinMax Temp.py" target="_blank" download>Download Answer (PDF)</a>
         <a href="sparks/Temperatures.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/Temperatures.pdf')">View Answer (PDF)</button>
+        <button onclick="viewPDF('sparks/Filtering RDD and MinMax Temp.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 2 -->
