--- a/index.html
+++ b/index.html
@@ -18,64 +18,56 @@
       <div class="question-item">
         <h2>Task 2: Filtering RDDs and the Minimum Temperature by Location</h2>
         <a href="spark/Filtering RDD and MinMax Temp.py" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/Temperatures.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('spark/Filtering RDD and MinMax Temp.py')">View Answer (PDF)</button>
+        <a href="spark/Filtering RDD and MinMax Temp.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('spark/Filtering RDD and MinMax Temp.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 2 -->
       <div class="question-item">
         <h2>Task 3: Counting Word Occurrences using flatMap()</h2>
-        <a href="sparks/Counting Word.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/Counting Word.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/Counting Word.pdf')">View Answer (PDF)</button>
+        <a href="spark/Counting Word Occurrences using flatmap().py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark/Counting Word Occurrences using flatmap().ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('sparks/Counting Word Occurrences using flatmap().py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 3 -->
       <div class="question-item">
         <h2>Task 4: Executing SQL Commands and SQL-style Functions on a DataFrame</h2>
-        <a href="sparks/SQL Commands.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/SQL Commands.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/SQL Commands.pdf')">View Answer (PDF)</button>
+        <a href="spark/Executing SQL commands and SQL-style functions.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark/Executing SQL commands and SQL-style functions.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('spark/SQL Commands.pdf')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 4 -->
       <div class="question-item">
         <h2>Task 5: Implement Total Spent by Customer with DataFrames</h2>
-        <a href="sparks/Total Spent.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/Total Spent.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/Total Spent.pdf')">View Answer (PDF)</button>
+        <a href="spark/Total Spent by Customer with DataFrames.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark/Total Spent by Customer with DataFrames.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('spark/Total Spent by Customer with DataFrames.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 5 -->
       <div class="question-item">
         <h2>Task 6: Use Broadcast Variables to Display Movie Names Instead of ID Numbers</h2>
-        <a href="sparks/Broadcast.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/Broadcast.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/Broadcast.pdf')">View Answer (PDF)</button>
+        <a href="spark/Broadcast Variables to Display Movie Names Instead of ID Numbers.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark/Broadcast Variables to Display Movie Names Instead of ID Numbers.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('spark/Broadcast Variables to Display Movie Names Instead of ID Numbers.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 6 -->
       <div class="question-item">
         <h2>Task 7: Using Spark ML to Produce Movie Recommendations</h2>
-        <a href="sparks/Movie Recommendations.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/Movie Recommendations.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/Movie Recommendations.pdf')">View Answer (PDF)</button>
+        <a href="spark/Spark ML to Produce Movie Recommendations.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark/Spark ML to Produce Movie Recommendations.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('spark/Spark ML to Produce Movie Recommendations.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 7 -->
       <div class="question-item">
         <h2>Task 8: Use Windows with Structured Streaming to Track Most-Viewed URLs</h2>
-        <a href="sparks/Most-Viewed URLs.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="sparks/Most-Viewed URLs.ipynb" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('sparks/Most-Viewed URLs.pdf')">View Answer (PDF)</button>
-      </div>
-
-      <!-- Question 8 -->
-      <div class="question-item">
-        <h2>Question 8: Explain Python file handling.</h2>
-        <a href="files/answer8.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer8.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer8.pdf')">View Answer (PDF)</button>
+        <a href="spark/Structured Streaming to Track Most-Viewed URLs.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark/Structured Streaming to Track Most-Viewed URLs.ipynb" download>Download Answer (Python)</a>
+        <button onclick="viewPython('spark/Structured Streaming to Track Most-Viewed URLs.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 9 -->
@@ -83,7 +75,7 @@
         <h2>Question 9: What are Python classes?</h2>
         <a href="spark.py" target="_blank" download>Download Answer (PDF)</a>
         <a href="spark.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('spark.py')">View Answer (PDF)</button>
+        <button onclick="viewPython('spark.py')">View Answer (PDF)</button>
       </div>
 
       <!-- Question 10 -->
