--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       <!-- Question 10 -->
       <div class="question-item">
         <h2>Question 10: Explain Python decorators.</h2>
-        <a href="files/answer10.pdf" target="_blank" download>Download Answer (PDF)</a>
-        <a href="files/answer10.py" download>Download Answer (Python)</a>
-        <button onclick="viewPDF('files/answer10.pdf')">View Answer (PDF)</button>
+        <a href="spark file.py" target="_blank" download>Download Answer (PDF)</a>
+        <a href="spark file.py" download>Download Answer (Python)</a>
+        <button onclick="viewPDF('spark file.py')">View Answer (PDF)</button>
       </div>
     </div>
   </main>
